fix(bookmarks): not wrapping as intended

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -25,6 +25,7 @@ $c-accent: #ff4081;
 
 // LAYOUT
 // ------
+$layout-xxs: 440px;
 $layout-xs: 600px;
 $layout-sm: 960px;
 $layout-md: 1280px;
