--- a/src/styles/mixins/_media-queries.scss
+++ b/src/styles/mixins/_media-queries.scss
@@ -1,5 +1,9 @@
 @mixin mq($size, $type: min) {
-  @if $size == 'xs' {
+  @if $size == 'xxs' {
+    @media screen and ($type + -width: $layout-xxs) {
+      @content;
+    }
+  } @else if $size == 'xs' {
     @media screen and ($type + -width: $layout-xs) {
       @content;
     }
@@ -16,6 +20,6 @@
       @content;
     }
   } @else {
-    @content;
+    @error 'Invalid size for mq';
   }
 }
